<?xml version="1.0"?>
<package format="3">
  <name>cvicenie8_pkg</name>
  <version>0.0.0</version>
  <description>ROS wrapper for ZADANIE1 robot simulator</description>
  <maintainer email="peter@example.com">peter</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>